plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.medinote'
version = '0.0.1-SNAPSHOT'
description = 'medinote_back_kys'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    all {
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
    }
}

repositories {
    mavenCentral()
}

dependencies {
    //기본 jpa
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    //롬복
    //compileOnly 'org.projectlombok:lombok'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    implementation 'org.springframework.boot:spring-boot-starter-validation'

    //mapStruct 관련
    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
    testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'

    //starter-web
    implementation 'org.springframework.boot:spring-boot-starter-web'

    //devtool
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    //mariadb client
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'

    //test 관련
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:mariadb'
    runtimeOnly 'com.h2database:h2' // 테스트용 인메모리 DB

    //security 관련
//    implementation 'org.springframework.boot:spring-boot-starter-security'
//    testImplementation 'org.springframework.security:spring-security-test'

    //log4j2
    implementation 'org.springframework.boot:spring-boot-starter-log4j2:3.5.3'

    //rss 수집
    implementation "com.rometools:rome:2.1.0"
    implementation "com.rometools:rome-modules:2.1.0"

    implementation 'org.springframework.boot:spring-boot-starter-webflux'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(JavaCompile) {
    options.compilerArgs += [
            '-Amapstruct.defaultComponentModel=spring',
            '-Amapstruct.unmappedTargetPolicy=IGNORE'
    ]
}

test {
    jvmArgs += ['-XX:+EnableDynamicAgentLoading']
    useJUnitPlatform()
}
